<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_main"
        tools:context="com.tonilopezmr.androidtesting.BasicEspressoActivity">

    <EditText
            android:id="@+id/welcome_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:maxLength="20"
            app:layout_constraintBottom_toBottomOf="@+id/content_main"
            app:layout_constraintLeft_toLeftOf="@+id/content_main"
            app:layout_constraintRight_toRightOf="@+id/content_main"
            app:layout_constraintTop_toTopOf="@+id/content_main"/>

</android.support.constraint.ConstraintLayout>
